#164 Modify Javadoc and library use.